# ember

./: .gitignore  Dockerfile  Makefile  README.md  debug.ipynb  load.ipynb  pyproject.toml  requirements.txt  setup.sh  test.ipynb  train.ipynb
.github/workflows/: test.yml
ember/: __init__.py  linear_cross_entropy.ipynb  rmsnorm.ipynb
ember/config/llm/: train.yaml  train_debug.yaml
ember/config/llm/hparams/: debug.yaml  default.yaml
ember/config/llm/model/: llama.yaml  llama_debug.yaml
ember/config/llm/sampler/: minp.yaml  nucleus.yaml  (+1 more)
ember/configs/llm/: train.yaml
ember/core/: __init__.py  weight_init.py
ember/kernels/: kernel_utils.py
ember/kernels/LinearCrossEntropy/: cross_entropy.md  linear_cross_entropy.py
ember/kernels/RMSNorm/: rms_norm.md  rms_norm.py
ember/llm/: __init__.py
ember/llm/data/: __init__.py  dataset.py  kv_cache.py  tokenizer.py
ember/llm/layers/: __init__.py  embeddings.py  mlp.py  norm.py  sampler.py
ember/llm/models/: transformer.py
ember/llm/scripts/: dev.py  train.py
ember/llm/types/: __init__.py  attention.py  cache.py  sampler.py  tokenizer.py
ember/llm/utils/: __init__.py  callbacks.py  logger.py  scheduler.py
ember/tests/: test_rmsnorm.py
ignite/: __init__.py
ignite/core/: weight_init.py
ignite/llm/: __init__.py  modules.py  rmsnorm.py  swiglu.py
ignite/llm/attention/: __init__.py  gqa.py  mla.py
ignite/llm/layers/: __init__.py  norm.py
ignite/llm/models/: transformer.py
ignite/tests/: test_rmsnorm.py
lightning_logs/version_2/: hparams.yaml
lightning_logs/version_3/: hparams.yaml
(+13 files in other folders)
