[project]
name = "ember"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.1",
    "helion>=0.2.3",
    "huggingface-hub>=0.36.0",
    "hydra-core>=1.3.2",
    "lightning>=2.6.0",
    "numpy>=2.2.6",
    "pytest>=9.0.1",
    "sentencepiece>=0.2.1",
    "tokenizers>=0.22.1",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]
